# minefit

./: .gitignore  API.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  README.md  SECURITY.md  TEST-RANKING-DIAGRAMS.md  TEST-RANKING-MERMAID-POLISHED.md  TEST-RANKING-VISUALS.md  TEST-WHY-MINEFIT-FORMATS.md  TEST.md  index.html  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  release-desktop.yml  release.yml
llmfit-core/: Cargo.toml
llmfit-core/src/: electricity.rs  hardware.rs  lib.rs  mining.rs  rig_profiles.rs
llmfit-desktop/: Cargo.toml
llmfit-tui/: Cargo.toml  README.md
llmfit-tui/src/: main.rs  persistence.rs  theme.rs  tui_app.rs  tui_events.rs  tui_ui.rs
npm/: README.md
scripts/: build-platform-package.js  npm-platforms.js
