[package]
name = "llmfit-core"
version.workspace = true
edition = "2024"
authors = ["Barkeydog"]
description = "Core library for minefit: hardware detection, mining feeds, profitability scoring, and power modeling."
license = "MIT"
repository = "https://github.com/Barkeydog/minefit"
homepage = "https://github.com/Barkeydog/minefit"
readme = "../README.md"
keywords = ["crypto", "mining", "hardware", "profitability", "power"]
categories = ["hardware-support"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.38"
time = "0.3"
regex = "1.11"
ureq = { version = "3.3", features = ["json"] }
