[package]
name = "minefit"
version.workspace = true
edition = "2024"
authors = ["Barkeydog"]
description = "Terminal UI for comparing live mineable coins, local rig economics, and power-aware mining methods."
license = "MIT"
repository = "https://github.com/Barkeydog/minefit"
homepage = "https://github.com/Barkeydog/minefit"
readme = "README.md"
keywords = ["crypto", "mining", "tui", "hardware", "coins"]
categories = ["command-line-utilities"]

[[bin]]
name = "minefit"
path = "src/main.rs"

[dependencies]
llmfit-core = { version = "0.7.0", path = "../llmfit-core" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.20"
colored = "3.1"
ratatui = "0.30"
crossterm = "0.29"
axum = "0.8"
tokio = { version = "1.47", features = ["rt-multi-thread", "signal", "net"] }
